# platform.core.security.krate

./: CMakeLists.txt  krate.manifest  project.config
common/: CMakeLists.txt  data-type.h  error.cpp  error.h  eventfd.cpp  eventfd.h  exception.h  file-descriptor.h  filesystem.cpp  filesystem.h  gmainloop-adaptor.cpp  gmainloop-adaptor.h  mainloop.cpp  mainloop.h  pam.cpp  pam.h  preprocessor.h  process.cpp  process.h  reflection.h  serialize.h  thread-pool.cpp  thread-pool.h
common/audit/: console-sink.cpp  console-sink.h  logger.cpp  logger.h  logsink.h  null-sink.cpp  null-sink.h
common/auth/: group.cpp  group.h  user.cpp  user.h
common/db/: column.cpp  column.h  connection.cpp  connection.h  statement.cpp  statement.h
common/dbus/: connection.cpp  connection.h  error.cpp  error.h  variant.cpp  variant.h
common/rmi/: callback-holder.h  client.cpp  client.h  connection.cpp  connection.h  message-composer.cpp  message-composer.h  message.cpp  message.h  notification.cpp  notification.h  service.cpp  service.h  socket.cpp  socket.h
common/xml/: document.cpp  document.h  keepblanks.cpp  keepblanks.h  node.cpp  node.h  parser.cpp  parser.h
lib/: CMakeLists.txt  app-proxy.cpp  client.cpp  client.h  context.h  krate-manager.cpp  krate.pc.in  manager.cpp  package-proxy.cpp
lib/krate/: app-info-internal.h  app-proxy.cpp  app-proxy.h  array.h  debug.h  krate-manager.cpp  krate.cpp  krate.h  package-info-internal.h  package-proxy.cpp  package-proxy.h
module/: CMakeLists.txt  krate-builder.cpp  krate-builder.h  krate-guard.h  krate.cpp  session.cpp  session.h  zone-builder.cpp  zone-builder.h  zone-guard.h  zone.cpp
module/data/: DefaultZoneManifest.xml
module/pam.d/: systemd-user-zone  systemd-user.in
packaging/: krate.spec
rmi/: app-proxy.h  manager.h  package-proxy.h
server/: CMakeLists.txt  app-bundle.cpp  app-bundle.h  app-proxy.cpp  app-proxy.h  context.h  launchpad.cpp  launchpad.h  main.cpp  manager.cpp  package-proxy.cpp  package-proxy.h  packman.cpp  packman.h  server.cpp  server.h  zone.cpp  zone.h
server/systemd/: krate.service.in
tools/: CMakeLists.txt
tools/apps/: CMakeLists.txt
tools/apps/kaskit/: CMakeLists.txt  org.tizen.kaskit.xml
tools/apps/kaskit/include/: conf.h  kaskit.h  widget.h
tools/apps/kaskit/res/edje/: app_icon.edc  launcher.edc  org.tizen.kaskit.edc
tools/apps/kaskit/src/: main.c  ui.c  widget.c
tools/apps/keyguard/: CMakeLists.txt  org.tizen.keyguard.xml
tools/apps/keyguard/include/: keyguard.h  widget.h
tools/apps/keyguard/res/edje/: keyguard.edc  org.tizen.keyguard.edc
tools/apps/keyguard/src/: main.c  ui.c  widget.c
tools/apps/setup-wizard/: CMakeLists.txt  org.tizen.krate-setup-wizard.xml
tools/apps/setup-wizard/include/: krate-setup.h  setup-text.h  widget.h  zone-setup.h
tools/apps/setup-wizard/res/data/: KrateManifest.xml
tools/apps/setup-wizard/res/edje/: layout.edc  org.tizen.krate-setup-wizard.edc  security.edc  setup.edc  welcome.edc
tools/apps/setup-wizard/src/: another.h  application.cpp  layout.cpp  layout.h  main.c  main.cpp  security.c  security.cpp  setup-wizard.cpp  setup-wizard.h  ui.c  ui.cpp  util.c  util.cpp  welcome.h  widget.c  widget.cpp  widget2.h  window.cpp  window.h
tools/apps/setup-wizard/src/common/: app-control.cpp  app-control.h  application.cpp  application.h  button.cpp  button.h  conformant.cpp  conformant.h  debug.h  entry.cpp  entry.h  genlist.cpp  genlist.h  layout.cpp  layout.h  naviframe.cpp  naviframe.h  notification.cpp  notification.h  popup.cpp  popup.h  progressbar.cpp  progressbar.h  radio.cpp  radio.h  shell.cpp  shell.h  timer.cpp  timer.h  widget.cpp  widget.h  window.cpp  window.h
tools/cli/: CMakeLists.txt  krate-admin-cli.cpp
tools/gumd-scripts/: 20_krate-add.post  20_krate-remove.post
volume/: CMakeLists.txt  ecryptfs.h  kernel-keyring.cpp  kernel-keyring.h  key-generator.cpp  key-generator.h  key-manager.cpp  key-manager.h  main.cpp
