#
# Copyright (c) 2015 Samsung Electronics Co., Ltd All Rights Reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(krate)

IF(NOT DEFINED VERSION)
	SET(VERSION "0.0.1")
ENDIF(NOT DEFINED VERSION)

INCLUDE(FindPkgConfig)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "DEBUG")
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(KRATE_API       ${PROJECT_SOURCE_DIR}/api)
SET(KRATE_LIB       ${PROJECT_SOURCE_DIR}/lib)
SET(KRATE_SERVER    ${PROJECT_SOURCE_DIR}/server)
SET(KRATE_DATA      ${PROJECT_SOURCE_DIR}/data)
SET(KRATE_TOOLS     ${PROJECT_SOURCE_DIR}/tools)
SET(KRATE_MODULE    ${PROJECT_SOURCE_DIR}/module)
SET(KRATE_VOLUME    ${PROJECT_SOURCE_DIR}/volume)

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.7)
	SET(CXX_STD "c++0x")
else()
	SET(CXX_STD "c++11")
endif()

SET(COMPILE_BASE_FLAGS		"-g -fPIC -Werror -Wall -Wl,--as-needed -Wl,--no-whole-archive")
SET(CMAKE_C_FLAGS_PROFILING	"${COMPILE_BASE_FLAGS} -O0 -pg")
SET(CMAKE_CXX_FLAGS_PROFILING	"${COMPILE_BASE_FLAGS} -O0 -pg -std=${CXX_STD} -fno-rtti")
SET(CMAKE_C_FLAGS_DEBUG		"${COMPILE_BASE_FLAGS} -O0 -ggdb")
SET(CMAKE_CXX_FLAGS_DEBUG	"${COMPILE_BASE_FLAGS} -O0 -ggdb -std=${CXX_STD} -fno-rtti")
SET(CMAKE_C_FLAGS_RELEASE	"${COMPILE_BASE_FLAGS} -O2 -DNDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE	"${COMPILE_BASE_FLAGS} -O2 -DNDEBUG -std=${CXX_STD} -fno-rtti")
SET(CMAKE_C_FLAGS_CCOV		"${COMPILE_BASE_FLAGS} -O0 --coverage")
SET(CMAKE_CXX_FLAGS_CCOV	"${COMPILE_BASE_FLAGS} -O0 --coverage -std=${CXX_STD} -fno-rtti")

IF(NOT DEFINED LIB_DIR)
	SET(LIB_DIR "${CMAKE_INSTALL_LIBDIR}")
ENDIF(NOT DEFINED LIB_DIR)

IF(NOT DEFINED INCLUDE_DIR)
	SET(INCLUDE__DIR "${CMAKE_INSTALL_INCLUDEDIR}")
ENDIF(NOT DEFINED INCLUDE_DIR)

IF(NOT DEFINED RUN_DIR)
	SET(RUN_DIR "/run")
ENDIF(NOT DEFINED RUN_DIR)

IF(NOT DEFINED BIN_DIR)
	SET(BIN_DIR "${CMAKE_INSTALL_BINDIR}")
ENDIF(NOT DEFINED BIN_DIR)

IF(NOT DEFINED HOME_DIR)
	SET(HOME_DIR "/home")
ENDIF(NOT DEFINED HOME_DIR)

IF(NOT DEFINED PAMD_DIR)
	SET(PAMD_DIR "${SYSCONF_INSTALL_DIR}/pam.d")
ENDIF(NOT DEFINED PAMD_DIR)

IF(NOT DEFINED SYSTEMD_UNIT_DIR)
	SET(SYSTEMD_UNIT_DIR "${CMAKE_INSTALL_PREFIX}/lib/systemd/system")
ENDIF(NOT DEFINED SYSTEMD_UNIT_DIR)

IF(NOT DEFINED CONF_DIR)
	SET(CONF_INSTALL_DIR "${SYSCONF_INSTALL_DIR}/krate")
ENDIF(NOT DEFINED CONF_DIR)

ADD_DEFINITIONS(-DUG_WAYLAND)

ADD_SUBDIRECTORY(${KRATE_LIB})
ADD_SUBDIRECTORY(${KRATE_SERVER})
ADD_SUBDIRECTORY(${KRATE_MODULE})
ADD_SUBDIRECTORY(${KRATE_VOLUME})
IF("${TIZEN_PROFILE_NAME}" STREQUAL "mobile")
ADD_SUBDIRECTORY(${KRATE_TOOLS})
ENDIF()
