CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(org.tizen.kaskit C)

INCLUDE_DIRECTORIES(./include)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(KASKIT REQUIRED
	capi-appfw-application
	capi-appfw-package-manager
	capi-appfw-app-manager
	badge
)

INCLUDE_DIRECTORIES(${EFL_APP_INCLUDE_DIRS} ${KASKIT_INCLUDE_DIRS})
LINK_DIRECTORIES(${EFL_APP_LIBRARY_DIRS} ${KASKIT_LIBRARY_DIRS})

SET(PROJECT_SRC src/main.c
            src/ui.c
            src/widget.c)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIE")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pie")

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRC})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${APP_INSTALL_PREFIX}/${PROJECT_NAME}/bin)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${EFL_APP_LIBRARIES} ${KASKIT_LIBRARIES})

ADD_CUSTOM_TARGET(${PROJECT_NAME}.edj
	COMMAND edje_cc -no-save -id ${CMAKE_CURRENT_SOURCE_DIR}/res/images
	${CMAKE_CURRENT_SOURCE_DIR}/res/edje/${PROJECT_NAME}.edc
	${CMAKE_BINARY_DIR}/${PROJECT_NAME}.edj
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/res/edje/${PROJECT_NAME}.edc)

ADD_DEPENDENCIES(${PROJECT_NAME} ${PROJECT_NAME}.edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.edj DESTINATION ${APP_INSTALL_PREFIX}/${PROJECT_NAME}/res)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/res/images/default_app_icon.png DESTINATION ${APP_INSTALL_PREFIX}/${PROJECT_NAME}/res/images)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.xml DESTINATION ${APP_SHARE_PACKAGES_DIR})
